--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lion Bank</title>
+  <meta name="viewport" content="width=1200px, initial-scale=1.0">
+  <title>Lion Bank | Main</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -27,38 +27,42 @@
 
 </head>
 <body>
- <div class="wrapper">
-   <div class="wrapper__content">
+ <div class="wrapper ">
+   <div class="wrapper__content main-page-wrapper">
     <section class="hero">
-      <header class="header">
-        <div class="container header__container">
-          <a href="/" class="logo">
-            <img src="img/logo.png" alt="lion bank logo" class="logo__img"></a>
-            <nav class="menu">
-              <ul class="menu__list">
-                <li class="menu__item">
-                  <a href="#" class="menu__link">Главная</a>
-                </li>
-                <li class="menu__item menu__item_active">
-                  <a href="#" class="menu__link">Услуги</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
-                </li>
-              </ul>
-            </nav>
+      <div class="container hero__container">
+        <header class="header">
+          <div class="header__col header__col_align_left">
+            <a href="/" class="logo">
+              <img src="img/logo.png" alt="lion bank logo" class="logo__img"></a>
+              <nav class="menu">
+                <ul class="menu__list">
+                  <li class="menu__item menu__item_active">
+                    <a href="./index.html" class="menu__link">Главная</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="./services.html" class="menu__link">Услуги</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#" class="menu__link">Отзывы</a>
+                  </li>
+                </ul>
+              </nav>
+          </div>
+          <div class="header__col header__col_align_right">
             <address class="contacts">
               <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
               <div class="contacts__dropdown-title">График работы</div>
             </address>
-        </div>    
+          </div> 
         </header>
         <div class="container">
-        <div class="hero__content">
-          <div class="hero__text-section">
-            <h1 class="hero__title">Не отказывай себе в желании быть первым</h1>
-            <h4 class="hero__subtitle">Банк с львиным характером</h4>
-            <a href="#" class="btn btn_color_ginger">Подробнее</a>
+          <div class="hero__content">
+            <div class="hero__text-section">
+              <h1 class="hero__title"> Не отказывай себе в желании быть первым</h1>
+              <h4 class="hero__subtitle">Банк с львиным характером</h4>
+              <a href="#" class="btn btn_color_ginger hero__btn">Подробнее</a>
+            </div>
           </div>
         </div>
       </div>
@@ -67,74 +71,74 @@
       <div class="container">
         <h2 class="section__title">Лучшие предложения банка</h2>
         <ul class="offers">
-          <li class="offers__item offers__item_theme_grey">
-            <div class="offers__header">
-              <img src="img/card-grey.png" alt="" class="offers__header-img">
+          <li class="offers__item offer offer__item_theme_grey">
+            <div class="offer__header">
+              <img src="img/card-grey.png" alt="" class="offer__header-img">
             </div>
-            <div class="offers__content">
-              <h3 class="offers__title">Карта «Базовая»</h3>
-              <div class="offers__prices">
-                <div class="offers__prices-cell">
-                  <div class="offers__price"> 
-                    <span class="offers__price-range">60 P.</span>
+            <div class="offer__content">
+              <h3 class="offer__title">Карта «Базовая»</h3>
+              <div class="offer__prices">
+                <div class="offer__prices-cell offer__price-cell_col_left ">
+                  <div class="offer__price"> 
+                    <span class="offer__price-range">60 P.</span>
                   </div>
-                  <div class="offers__price-desc">Обслуживание карты</div>
+                  <div class="offer__price-desc">Обслуживание карты</div>
                 </div>
-                <div class="offers__prices-cell">
-                  <div class="offers__price">
-                    <span class="offers__price-range">до 4%</span> 
+                <div class="offer__prices-cell offer__price-cell_col_right">
+                  <div class="offer__price">
+                    <span class="offer__price-range">до 4%</span> 
                   </div>
-                  <div class="offers__price-desc">Кэшбек за любые покупки</div>
+                  <div class="offer__price-desc">Кэшбек за любимые покупки</div>
                 </div>
               </div>
-              <div class="offers__btn-wrapper">
+              <div class="offer__btn-wrapper">
                 <a href="#" class="btn btn_color_black">ПОДРОБНЕЕ</a>
               </div>
             </div>
           </li>
-          <li class="offers__item offers__item_theme_blue">
-            <div class="offers__header">
-              <img src="img/card-blue.png" alt="" class="offers__header-img">
+          <li class="offers__item offer offer__item_theme_blue">
+            <div class="offer__header">
+              <img src="img/card-blue.png" alt="" class="offer__header-img">
             </div>
-            <div class="offers__content">
-              <h3 class="offers__title">Карта «Оптима»</h3>
-              <div class="offers__prices">
-                <div class="offers__prices-cell">
-                  <div class="offers__price">
-                    <span class="offers__price-range">90 P.</span>
+            <div class="offer__content">
+              <h3 class="offer__title">Карта «Оптима»</h3>
+              <div class="offer__prices">
+                <div class="offer__prices-cell offer__price-cell_col_left">
+                  <div class="offer__price">
+                    <span class="offer__price-range">90 P.</span>
                   </div>
-                  <div class="offers__price-desc">Обслуживание карты</div>
+                  <div class="offer__price-desc">Обслуживание карты</div>
                 </div>
-                <div class="offers__prices-cell">
-                  <div class="offers__price"><span class="offers__price-range">до 5%</span>
+                <div class="offer__prices-cell offer__price-cell_col_right">
+                  <div class="offer__price"><span class="offer__price-range">до 5%</span>
                   </div>
-                  <div class="offers__price-desc">Кэшбек за любые покупки</div>
+                  <div class="offer__price-desc">Кэшбек за любимые покупки</div>
                 </div>
               </div>
-              <div class="offers__btn-wrapper">
+              <div class="offer__btn-wrapper">
                 <a href="#" class="btn btn_color_black">ПОДРОБНЕЕ</a>
               </div>
             </div>
           </li>
-          <li class="offers__item offers__item_theme_gold">
-            <div class="offers__header">
-              <img src="img/card-gold.png" alt="" class="offers__header-img">
+          <li class="offers__item offer offer__item_theme_gold">
+            <div class="offer__header">
+              <img src="img/card-gold.png" alt="" class="offer__header-img">
             </div>
-            <div class="offers__content">
-              <h3 class="offers__title">Карта «Премиум»</h3>
-              <div class="offers__prices">
-                <div class="offers__prices-cell">
-                  <div class="offers__price">
-                    <span class="offers__price-range">490 P.</span>
+            <div class="offer__content">
+              <h3 class="offer__title">Карта «Платинум»</h3>
+              <div class="offer__prices">
+                <div class="offer__prices-cell offer__price-cell_col_left">
+                  <div class="offer__price ">
+                    <span class="offer__price-range">490 P.</span>
                   </div>
-                  <div class="offers__price-desc">Обслуживание карты</div>
+                  <div class="offer__price-desc">Обслуживание карты</div>
                 </div>
-                <div class="offers__prices-cell">
-                  <div class="offers__price"><span class="offers__price-range">до</span> 6%</div>
-                  <div class="offers__price-desc">Кэшбек за любые покупки</div>
+                <div class="offer__prices-cell offer__price-cell_col_right">
+                  <div class="offer__price"><span class="offer__price-range">до</span> 6%</div>
+                  <div class="offer__price-desc">Кэшбек за любимые покупки</div>
                 </div>
               </div>
-              <div class="offers__btn-wrapper">
+              <div class="offer__btn-wrapper">
                 <a href="#" class="btn btn_color_black">ПОДРОБНЕЕ</a>
               </div>
             </div>
@@ -146,20 +150,20 @@
       <div class="container">
         <h2 class="section__title">Новости и акции</h2>
         <ul class="news">
-          <li class="news__item">
-            <img src="img/phone.jpg" alt="Мобильное приложение" class="news__cover">
-            <div class="news__text-content">
-              <time class="news__date">Ноябрь 2019</time>
-              <div class="news__title">Удобное мобильное приложение</div>
-              <div class="news__desc">Хороший банк, хорошие условия</div>
+          <li class="news__item single-news">
+            <img src="img/phone.jpg" alt="Мобильное приложение" class="single-news__cover">
+            <div class="single-news__text-content">
+              <time class="single-news__date">Декабрь 2019</time>
+              <div class="single-news__title">Удобное мобильное приложение</div>
+              <div class="single-news__desc">Хороший банк, хорошие условия.</div>
             </div>
           </li>
-          <li class="news__item">
-            <img src="img/mountains.jpg" alt="Путешествие" class="news__cover">
-            <div class="news__text-content">
-              <time class="news__date">Ноябрь 2019</time>
-              <div class="news__title">Копите на поездку? Откойте счет!</div>
-              <div class="news__desc">Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый лучший в мире!</div>
+          <li class="news__item single-news">
+            <img src="img/mountains.jpg" alt="Путешествие" class="single-news__cover">
+            <div class="single-news__text-content">
+              <time class="single-news__date">Декабрь 2019</time>
+              <div class="single-news__title">Копите на поездку? Откройте счет!</div>
+              <div class="single-news__desc">Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый лучший в мире!</div>
             </div>
           </li>
         </ul>
@@ -191,38 +195,41 @@
         </ul>
       </div>
     </section>
-    <section class="section">
-  <div class="container">
-   <div class="about">
-    <div class="about__desc">
-      <h2 class="about__title">О банке</h2>
-      <div class="about__desc-text">
-        <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
+    <section class="section about-section">
+      <div class="container">
+        <div class="about">
+          <div class="about__desc">
+            <h2 class="about__title">О банке</h2>
+            <div class="about__desc-text">
+              <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
+            </div>
+            <a href="#" class="btn btn_color_ginger">ПОДРОБНЕЕ</a>
+          </div>
+        </div>
       </div>
-      <a href="#" class="btn btn_color_ginger">ПОДРОБНЕЕ</a>
-    </div>
-   </div>
-  </div>
     </section>
   </div>
   <footer class="footer-container">
   <div class="container footer-container__content">
-    <div class="footer">
+    <div class="footer footer-container__section">
+      <div class="footer__col footer__col_align_left">
         <a href="/" class="logo">
-        <img src="img/logo.png" alt="lion bank logo" class="logo__img"></a>
-        <nav class="menu">
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a href="#" class="menu__link">Главная</a>
-            </li>
-            <li class="menu__item menu__item_active">
-              <a href="#" class="menu__link">Услуги</a>
-            </li>
-            <li class="menu__item">
-              <a href="#" class="menu__link">Отзывы</a>
-            </li>
-          </ul>
-        </nav>
+          <img src="img/logo.png" alt="lion bank logo" class="logo__img"></a>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item menu__item_active">
+                <a href="./index.html" class="menu__link">Главная</a>
+              </li>
+              <li class="menu__item ">
+                <a href="./services.html" class="menu__link">Услуги</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Отзывы</a>
+              </li>
+            </ul>
+          </nav>
+      </div>
+      <div class="footer__col footer__col_align_right">
         <ul class="socials">
           <li class="socials__item socials__item_icon_tg">
             <a href="#" class="socials__link"><img src="img/tg.png" alt="tg" class="socials__img"></a>
@@ -241,6 +248,7 @@
           <div class="contacts__desc">Бесплатный звонок по России</div>
           <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
         </address>
+      </div>
     </div>
   </div>
   </footer>
