--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="offer__prices-cell offer__price-cell_col_right">
                   <div class="offer__price">
-                    <span class="offer__price-range">до 4%</span> 
+                    <span class="offer__price-range">до 4 %</span> 
                   </div>
                   <div class="offer__price-desc">Кэшбек за любимые покупки</div>
                 </div>
@@ -110,7 +110,7 @@
                   <div class="offer__price-desc">Обслуживание карты</div>
                 </div>
                 <div class="offer__prices-cell offer__price-cell_col_right">
-                  <div class="offer__price"><span class="offer__price-range">до 5%</span>
+                  <div class="offer__price"><span class="offer__price-range">до 5 %</span>
                   </div>
                   <div class="offer__price-desc">Кэшбек за любимые покупки</div>
                 </div>
@@ -134,7 +134,7 @@
                   <div class="offer__price-desc">Обслуживание карты</div>
                 </div>
                 <div class="offer__prices-cell offer__price-cell_col_right">
-                  <div class="offer__price"><span class="offer__price-range">до</span> 6%</div>
+                  <div class="offer__price"><span class="offer__price-range">до</span> 6 %</div>
                   <div class="offer__price-desc">Кэшбек за любимые покупки</div>
                 </div>
               </div>
@@ -232,16 +232,16 @@
       <div class="footer__col footer__col_align_right">
         <ul class="socials">
           <li class="socials__item socials__item_icon_tg">
-            <a href="#" class="socials__link"><img src="img/tg.png" alt="tg" class="socials__img"></a>
+            <a href="#" class="socials__link"><img src="./img/tg.png" alt="tg" class="socials__img"></a>
           </li>
           <li class="socials__item socials__item_icon_vk">
-            <a href="#" class="socials__link"><img src="img/vk.png" alt="vk" class="socials__img"></a>
+            <a href="#" class="socials__link"><img src="./img/vk.png" alt="vk" class="socials__img"></a>
           </li>
           <li class="socials__item socials__item_icon_fb">
-            <a href="#" class="socials__link"><img src="img/fb.png" alt="fb" class="socials__img"></a>
+            <a href="#" class="socials__link"><img src="./img/fb.png" alt="fb" class="socials__img"></a>
           </li>
           <li class="socials__item socials__item_icon_ig">
-            <a href="#" class="socials__link"><img src="img/ig.png" alt="ig" class="socials__img"></a>
+            <a href="#" class="socials__link"><img src="./img/ig.png" alt="ig" class="socials__img"></a>
           </li>
         </ul>
         <address class="contacts">
