--- a/services.html
+++ b/services.html
@@ -203,16 +203,16 @@
         <div class="footer__col footer__col_align_right">
           <ul class="socials">
             <li class="socials__item socials__item_icon_tg">
-              <a href="#" class="socials__link"><img src="img/tg.png" alt="tg" class="socials__img"></a>
+              <a href="#" class="socials__link"><img src="./img/tg.png" alt="tg" class="socials__img"></a>
             </li>
             <li class="socials__item socials__item_icon_vk">
-              <a href="#" class="socials__link"><img src="img/vk.png" alt="vk" class="socials__img"></a>
+              <a href="#" class="socials__link"><img src="./img/vk.png" alt="vk" class="socials__img"></a>
             </li>
             <li class="socials__item socials__item_icon_fb">
-              <a href="#" class="socials__link"><img src="img/fb.png" alt="fb" class="socials__img"></a>
+              <a href="#" class="socials__link"><img src="./img/fb.png" alt="fb" class="socials__img"></a>
             </li>
             <li class="socials__item socials__item_icon_ig">
-              <a href="#" class="socials__link"><img src="img/ig.png" alt="ig" class="socials__img"></a>
+              <a href="#" class="socials__link"><img src="./img/ig.png" alt="ig" class="socials__img"></a>
             </li>
           </ul>
           <address class="contacts">
