--- a/hello-page.html
+++ b/hello-page.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper hello-wrapper">
      <div class="hello">
        <div class="hello__content">
         <img src="./img/logo-vert.png" alt="logo-vert" class="hello__img">
