--- a/index.html
+++ b/index.html
@@ -9,21 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./css/main.css">
-  <!-- <link rel="stylesheet" href="css/layout/base.css">
-  <link rel="stylesheet" href="css/layout/normalize.css">
-
-  <link rel="stylesheet" href="css/blocks/hero.css">
-  <link rel="stylesheet" href="css/blocks/header.css">
-  <link rel="stylesheet" href="css/blocks/logo.css">
-  <link rel="stylesheet" href="css/blocks/menu.css">
-  <link rel="stylesheet" href="css/blocks/contacts.css">
-  <link rel="stylesheet" href="css/blocks/offers.css">
-  <link rel="stylesheet" href="css/blocks/news.css">
-  <link rel="stylesheet" href="css/blocks/pager.css">
-  <link rel="stylesheet" href="css/blocks/about.css">
-  <link rel="stylesheet" href="css/blocks/footer-container.css">
-  <link rel="stylesheet" href="css/blocks/footer.css">
-  <link rel="stylesheet" href="css/blocks/socials.css"> -->
 
 </head>
 <body>
@@ -44,7 +29,7 @@
                     <a href="./services.html" class="menu__link">Услуги</a>
                   </li>
                   <li class="menu__item">
-                    <a href="#" class="menu__link">Отзывы</a>
+                    <a href="./reviews.html" class="menu__link">Отзывы</a>
                   </li>
                 </ul>
               </nav>
@@ -52,7 +37,16 @@
           <div class="header__col header__col_align_right">
             <address class="contacts">
               <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-              <div class="contacts__dropdown-title">График работы</div>
+              <div class="dropdown">
+                <a href="#" class="dropdown__link">График работы</a>
+                <div class="dropdown__triangle"></div>
+                <div class="dropdown__container">
+                  <ul class="dropdown__list">
+                    <li class="dropdown__item dropdown__item_first ">пн-вс: 9.00-20.00</li>
+                    <li class="dropdown__item dropdown__item_second">Обед: 14.00-14.30</li>
+                  </ul>
+                </div>
+              </div> 
             </address>
           </div> 
         </header>
