--- a/reviews.html
+++ b/reviews.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1200px, initial-scale=1.0">
-  <title>Lion Bank | Services</title>
+  <title>Lion Bank | Reviews</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
@@ -38,7 +38,15 @@
         <div class="header__col header__col_align_right">
           <address class="contacts">
             <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-            <div class="contacts__dropdown-title">График работы</div>
+            <div class="contacts__timetable">
+              <a href="#" class="contacts__title">График работы</a>
+              <div class="contacts__drop">
+                <ul class="contacts__list">
+                  <li class="contacts__item"><strong>пн-вс: 9.00 - 20.00</strong></li>
+                  <li class="contacts__item">Обед: 14.00 - 14.30</li>
+                </ul>
+              </div>
+            </div> 
           </address>
         </div> 
       </header>
@@ -49,12 +57,259 @@
             <a href="./index.html" class="breadcrumbs__link">Главная</a>
           </li>
           <li class="breadcrumbs__item breadcrumbs__item_active">
-            <a href="#" class="breadcrumbs__link">Отзывы</a>
+            <a href="./reviews.html" class="breadcrumbs__link">Отзывы</a>
           </li>
         </ul>
       </nav>
     </div>
   </section>
-  <main class="reviews-content">
-
+  <main class="page-content page-content__reviews"> 
+    <div class="container">
+     <ul class="reviews">
+       <li class="reviews__item review">
+         <div class="review__header">
+           <div class="review__photo">
+             <div class="avatar">
+               <img src="./img/user1.jpg" alt="user" class="avatar__img">
+             </div>
+           </div>
+           <div class="review__userdata">
+             <a href="#" class="review__user">Иван Петрович</a>
+             <ul class="review__tags">
+               <li class="review__tags-item tag tag_bg_green">Карта базовая</li>
+               <li class="review__tags-item tag tag_bg_green">Ипотека на 10 лет</li>
+             </ul>
+           </div>
+         </div>
+         <div class="review__content">
+           <h3 class="review__title">Доволен работой банка</h3>
+           <div class="review__content-text"><p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p> </div>
+           <time class="review__date">Ноябрь 2019</time>
+         </div>
+       </li> 
+       <li class="reviews__item review">
+         <div class="review__header">
+           <div class="review__photo">
+             <div class="avatar">
+               <img src="./img/user3.jpg" alt="user" class="avatar__img">
+             </div>
+           </div>
+           <div class="review__userdata">
+             <a href="#" class="review__user">Лиза Сидорова</a>
+             <ul class="review__tags">
+               <li class="review__tags-item tag tag_bg_green">Карта оптима</li>
+             </ul>
+           </div>
+         </div>
+         <div class="review__content">
+           <h3 class="review__title">Хорошие условия.</h3>
+           <div class="review__content-text"><p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p> </div>
+           <time class="review__date">Ноябрь 2019</time>
+         </div>
+       </li>
+       <li class="reviews__item review">
+        <div class="review__header">
+          <div class="review__photo">
+            <div class="avatar">
+              <img src="./img/user2.jpg" alt="user" class="avatar__img">
+            </div>
+          </div>
+          <div class="review__userdata">
+            <a href="#" class="review__user">Екатерина Жмых</a>
+            <ul class="review__tags">
+              <li class="review__tags-item tag tag_bg_green">Ипотека на 10 лет</li>
+            </ul>
+          </div>
+        </div>
+        <div class="review__content">
+          <h3 class="review__title">Удобная служба поддержки, отвечают 24/7.</h3>
+          <div class="review__content-text"><p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p></div>
+          <time class="review__date">Ноябрь 2019</time>
+        </div>
+      </li>
+       <li class="reviews__item review">
+         <div class="review__header">
+           <div class="review__photo">
+             <div class="avatar">
+               <img src="./img/user4.jpg" alt="user" class="avatar__img">
+             </div>
+           </div>
+           <div class="review__userdata">
+             <a href="#" class="review__user">Антон Игоревич</a>
+             <ul class="review__tags">
+               <li class="review__tags-item tag tag_bg_green">Автокредит на 5 лет</li>
+             </ul>
+           </div>
+         </div>
+         <div class="review__content">
+           <h3 class="review__title">Операторы отзывчивые и вежливые!</h3>
+           <div class="review__content-text"><p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p></div>
+           <time class="review__date">Ноябрь 2019</time>
+         </div>
+       </li>
+     </ul>
+      <div class="pager pager_theme_light pager__reviews">
+        <div class="pager__display">Страница 1 из 7</div>
+        <ul class="pager__list">
+          <li class="pager__item pager__item_active">
+            <a href="#" class="pager__link">1</a>
+          </li>
+          <li class="pager__item">
+            <a href="#" class="pager__link">2</a>
+          </li>
+          <li class="pager__item">
+            <a href="#" class="pager__link">3</a>
+          </li>
+          <li class="pager__item">
+            <a href="#" class="pager__link">4</a>
+          </li>
+          <li class="pager__item">
+            <a href="#" class="pager__link">5</a>
+          </li>
+          <li class="pager__item">
+            <a href="#" class="pager__link">6</a>
+          </li>
+          <li class="pager__item">
+            <a href="#" class="pager__link">7</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </main>
+  <section class="separator">
+    <div class="container">
+      <div class="separator__content">
+        <h2 class="separator__title">LionBank-Онлайн
+          Простой способ зайти в банк</h2>
+      </div>
+    </div>
+  </section>
+  <section class="inner-section inner-section__reviews inner-section_bg_grey">
+    <div class="container">
+      <h2 class="inner-section__title inner-section__reviews-title">Оставьте отзыв</h2>
+      <form class="form">
+        <div class="form__row">
+          <input type="text" placeholder="ФИО" class="form__input">
+          <input type="text" placeholder="Ссылка на профиль в вк" class="form__input">
+        </div>
+        <div class="form__row">
+          <textarea class="form__input form__input_textarea" placeholder="Напишите ваш честный отзыв:)" name="" id="" cols="30" rows="10"></textarea>
+        </div>
+        <div class="form__controls">
+          <div class="form__controls-title">Какими услугами банка пользуетесь?</div>
+          <ul class="controls">
+            <li class="controls__item">
+              <label class="controls__elem">
+                <input type="checkbox" class="controls__checkbox">
+                <div class="tag controls__tag">Карта базовая</div>
+              </label>
+            </li>
+            <li class="controls__item">
+              <label class="controls__elem">
+                <input type="checkbox" class="controls__checkbox">
+                <div class="tag controls__tag">Ипотека на 10 лет</div>
+              </label>
+            </li>
+            <li class="controls__item">
+              <label class="controls__elem">
+                <input type="checkbox" class="controls__checkbox">
+                <div class="tag controls__tag">Карта оптима</div>
+              </label>
+            </li>
+            <li class="controls__item">
+              <label class="controls__elem">
+                <input type="checkbox" class="controls__checkbox">
+                <div class="tag controls__tag">Никакими</div>
+              </label>
+            </li>
+            <li class="controls__item">
+              <label class="controls__elem">
+                <input type="checkbox" class="controls__checkbox">
+                <div class="tag controls__tag">Ипотека на 100 лет</div>
+              </label>
+            </li>
+            <li class="controls__item">
+              <label class="controls__elem">
+                <input type="checkbox" class="controls__checkbox">
+                <div class="tag controls__tag">Ипотека на 20 лет</div>
+              </label>
+            </li>
+            <li class="controls__item">
+              <label class="controls__elem">
+                <input type="checkbox" class="controls__checkbox">
+                <div class="tag controls__tag">Другое</div>
+              </label>
+            </li>
+            <li class="controls__item">
+              <label class="controls__elem">
+                <input type="checkbox" class="controls__checkbox">
+                <div class="tag controls__tag">Страхование</div>
+              </label>
+            </li>
+            <li class="controls__item">
+              <label class="controls__elem">
+                <input type="checkbox" class="controls__checkbox">
+                <div class="tag controls__tag">Кредитная карта</div>
+              </label>
+            </li>
+            <li class="controls__item">
+              <label class="controls__elem">
+                <input type="checkbox" class="controls__checkbox">
+                <div class="tag controls__tag">Автокредит на 7 лет</div>
+              </label>
+            </li>
+            
+          </ul>
+        </div>
+        <div class="form__btns">
+          <button type="reset" class="btn form__btn btn_color_grey">Очистить</button>
+          <button type="submit" class="btn form__btn btn_color_black">Отправить</button>
+        </div>
+      </form>
+    </div>
+  </section>
+  <footer class="inner-footer">
+    <div class="container inner-footer__container">
+      <div class="footer">
+        <div class="footer__col footer__col_align_left">
+          <a href="./index.html" class="logo">
+            <img src="img/logo.png" alt="lion bank logo" class="logo__img"></a>
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__item menu__item_active">
+                  <a href="./index.html" class="menu__link">Главная</a>
+                </li>
+                <li class="menu__item ">
+                  <a href="./services.html" class="menu__link">Услуги</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Отзывы</a>
+                </li>
+              </ul>
+            </nav>
+        </div>
+        <div class="footer__col footer__col_align_right">
+          <ul class="socials">
+            <li class="socials__item socials__item_icon_tg">
+              <a href="#" class="socials__link">
+            </li>
+            <li class="socials__item socials__item_icon_vk">
+              <a href="#" class="socials__link">
+            <li class="socials__item socials__item_icon_fb">
+              <a href="#" class="socials__link">
+            </li>
+            <li class="socials__item socials__item_icon_ig">
+              <a href="#" class="socials__link">
+            </li>
+          </ul>
+          <address class="contacts">
+            <div class="contacts__desc">Бесплатный звонок по России</div>
+            <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+          </address>
+        </div>
+      </div>
+    </div> 
+  </footer>
+</div>
+</body>
+</html>
