--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
@@ -38,7 +38,15 @@
         <div class="header__col header__col_align_right">
           <address class="contacts">
             <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-            <div class="contacts__dropdown-title">График работы</div>
+            <div class="contacts__timetable">
+              <a href="#" class="contacts__title">График работы</a>
+              <div class="contacts__drop">
+                <ul class="contacts__list">
+                  <li class="contacts__item"><strong>пн-вс: 9.00 - 20.00</strong></li>
+                  <li class="contacts__item">Обед: 14.00 - 14.30</li>
+                </ul>
+              </div>
+            </div> 
           </address>
         </div> 
       </header>
@@ -181,7 +189,7 @@
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
@@ -189,16 +197,15 @@
         <div class="footer__col footer__col_align_right">
           <ul class="socials">
             <li class="socials__item socials__item_icon_tg">
-              <a href="#" class="socials__link"><img src="./img/tg.png" alt="tg" class="socials__img"></a>
+              <a href="#" class="socials__link">
             </li>
             <li class="socials__item socials__item_icon_vk">
-              <a href="#" class="socials__link"><img src="./img/vk.png" alt="vk" class="socials__img"></a>
-            </li>
+              <a href="#" class="socials__link">
             <li class="socials__item socials__item_icon_fb">
-              <a href="#" class="socials__link"><img src="./img/fb.png" alt="fb" class="socials__img"></a>
+              <a href="#" class="socials__link">
             </li>
             <li class="socials__item socials__item_icon_ig">
-              <a href="#" class="socials__link"><img src="./img/ig.png" alt="ig" class="socials__img"></a>
+              <a href="#" class="socials__link">
             </li>
           </ul>
           <address class="contacts">
